# FStar

./: .gitattributes  .gitignore  .kremlin_version  CONTRIBUTING.md  INSTALL.md  Makefile  configure  dune  flake.nix  fstar.opam  package.json  version.txt
.docker/: dune.Dockerfile  esy.Dockerfile  package.Dockerfile  standalone.Dockerfile
.docker/base/: Dockerfile  Dockerfile.new
.github/: build-windows.sh  setup-macos.sh  setup-windows.sh
.github/workflows/: build-windows.yml  check-friends.yml  linux-test-package.yaml  linux-x64.yaml  macos-build.yml  release.yml  windows.yaml  windows.yml
.nix/: fstar-pre.nix  fstar.nix
.scripts/: bin-install.sh  cygwin-packages  process_build.sh  release-post.sh  release-pre.sh  test-package-aux.sh  test-package.sh  test_package.sh
.scripts/windows/: build-fstar.ps1  build-fstar.sh  everest.sh
doc/: steel_auto.md
examples/: Makefile
examples/algorithms/: BinarySearch.fst.hints  GC.fst  Makefile  QuickSort.Seq.fst.hints
examples/crypto/: AES.fst.hints  Cap.fst.hints  (+16 more)
lib/: Makefile
ocaml/: default.nix  fstar.install
ocaml/fstar-lib/: FStar_BigInt.mli  FStar_Bytes.ml  FStar_Compiler_Util.ml  FStar_Extraction_ML_PrintML.ml  FStar_Int16.ml  FStar_Int16_Base.ml  FStar_Int32.ml  FStar_Int32_Base.ml  FStar_Int64_Base.ml  FStar_Int8_Base.ml  FStar_Ints.ml  FStar_UInt16_Base.ml  FStar_UInt16_Base.mli  FStar_UInt32.ml  FStar_UInt32_Base.ml  FStar_UInt32_Base.mli  FStar_UInt64.ml  FStar_UInt64_Base.ml  FStar_UInt8.ml  dune  make_fstar_version.sh  prims.ml
ocaml/fstar-lib-base/: FStar_Int64.ml  FStar_Int8.ml  FStar_UInt16.ml  dune
ocaml/fstar-lib/dynamic/: FStar_Version.ml
src/: default.nix
ulib/: .gitignore  FStar.All.fst  FStar.Array.fst.hints  FStar.BV.fst.hints  FStar.BV.fsti.hints  FStar.BitVector.fst.hints  FStar.Buffer.Quantifiers.fst.hints  FStar.Buffer.fst  FStar.Buffer.fst.hints  FStar.BufferNG.fst.hints  FStar.Bytes.fst.hints  FStar.Crypto.fst.hints  FStar.Fin.fst.hints  FStar.Int.Cast.Full.fst.hints  FStar.Int.Cast.fst.hints  FStar.Int128.fst.hints  FStar.Int16.fst.hints  FStar.Int32.fst.hints  FStar.Int63.fst.hints  FStar.Int64.fst.hints  FStar.Int8.fst.hints  FStar.Integers.fst.hints  FStar.List.fst  FStar.Math.Lemmas.fst  FStar.Matrix2.fsti.hints  FStar.Modifies.fst  FStar.Modifies.fsti  FStar.ModifiesGen.fst  FStar.ModifiesGen.fsti  FStar.Monotonic.Heap.fst  FStar.Monotonic.Heap.fsti  FStar.Monotonic.HyperStack.fst  FStar.Monotonic.Seq.fst.hints  FStar.Pointer.Base.fst  FStar.Pointer.Base.fst.hints  FStar.Pointer.Base.fsti  FStar.Pointer.Base.fsti.hints  FStar.Pointer.Derived1.fst.hints  FStar.Pointer.Derived1.fsti.hints  FStar.Pointer.Derived2.fst.hints  (+38 more)
(+505 files in other folders)
