(include_subdirs unqualified)
(library
 (name fstar_lib)
 (public_name fstar.lib)
 (libraries
   zarith
   stdint
 )
 (implements fstar.lib.base)
 (modes native)
 (preprocess (pps ppx_deriving.show ppx_deriving_yojson sedlex.ppx))
)

 ; (modules_without_implementation
 ;   FStar_BigInt
 ;   FStar_Int8_Base
 ;   FStar_Int16_Base
 ;   FStar_Int32_Base
 ;   FStar_Int64_Base
 ;   FStar_UInt16_Base
 ;   FStar_UInt32_Base
 ;   FStar_UInt64_Base
 ; )
